fix alignment issue

--- a/docs/stylesheets/extra.css
+++ b/docs/stylesheets/extra.css
@@ -9,26 +9,30 @@
 html .md-footer-meta.md-typeset a.supportemail {
   color: #aaaaff;
 }
-.lightgallery {
-display:flex
-}
+
+
 img {
   border-radius: 0.25rem;
   box-shadow: 0 4px 6px -1px rgb(0 0 0 / 10%), 0 2px 4px -2px rgb(0 0 0 / 10%); 
 }
 
 img[alt$=">"] {
-margin-left:auto;
+    float: right;
+    margin-left: 2rem;
+    margin-bottom: 2rem;
+    clear: both;
   }
-
   
 img[alt$="<"] {
-margin-right:auto
-  }
-
-
-  
+    float: left;
+    margin-right: 2rem;
+    margin-bottom: 2rem;
+    clear: both;
+}
 img[alt$="><"] {
-margin:auto;
+    display: block;
+    max-width: 100%;
+    height: auto;
+    margin: auto;
+    float: none!important;
   }
-
